# assistant

./: .gitignore  README.md  README_DECISION_TREE_PATCH.md  README_NO_WORDLIST_PATCH.md  README_WEB.md  agent.py  app.py  build_index.py  kb.py  main.py  pubmed.py  pyproject.toml  registry.py  requirements-web.txt  run.py  todo.md  web_server.py
medical_assistant/: config.py  llm.py  prompts.py  schemas.py
resources/: clean_medlineplus_xml.py  medlineplus_a1c_6308.md  medlineplus_abdominal-pain_3061.md  medlineplus_abortion_122.md  medlineplus_abscess_3063.md  medlineplus_acne_124.md  medlineplus_acoustic-neuroma_1624.md  medlineplus_acupuncture_3071.md  medlineplus_acute-bronchitis_5755.md  medlineplus_acute-flaccid-myelitis_7207.md  medlineplus_acute-lymphocytic-leukemia_1437.md  medlineplus_acute-myeloid-leukemia_5622.md  medlineplus_addison-disease_1233.md  medlineplus_adenoids_1515.md  medlineplus_adhesions_3920.md  medlineplus_adrenal-gland-cancer_5211.md  medlineplus_adrenal-gland-disorders_128.md  medlineplus_advance-directives_4151.md  medlineplus_after-surgery_5419.md  medlineplus_air-pollution_130.md  medlineplus_alcohol-use-disorder-aud-treatment_6621.md  medlineplus_alcohol-use-disorder-aud_120.md  medlineplus_alcohol_1558.md  medlineplus_allergy_24.md  medlineplus_alpha-1-antitrypsin-deficiency_1692.md  medlineplus_alzheimer-s-caregivers_1564.md  medlineplus_alzheimer-s-disease_22.md  medlineplus_amblyopia_6189.md  medlineplus_amino-acid-metabolism-disorders_6385.md  medlineplus_amyloidosis_5273.md  medlineplus_amyotrophic-lateral-sclerosis_135.md  (+986 more)
(+83 files in other folders)
