[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-assistant"
version = "0.1.0"
description = "State-machine medical case localization assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "langchain-ollama>=0.2.0",
  "langchain-chroma>=0.1.2",
  "chromadb>=0.5.0",
  "requests>=2.32.0",
  "orjson>=3.10.0"
]

[tool.setuptools.packages.find]
include = ["medical_assistant*"]
